sidebar overflow isssue resolved

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4750,7 +4750,6 @@ input[type="checkbox"].toggle__check {
   right: 0;
   width: 50vw;
   height: 100vh;
-  overflow: auto;
   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.17);
   padding: 1.5em;
   -webkit-transform: translate3d(100%, 0, 0);
@@ -4765,6 +4764,13 @@ input[type="checkbox"].toggle__check {
   padding: 0.5em;
   font-size: 1em;
   margin-left: 1em;
+}
+.page-sidebar__body {
+  overflow: auto;
+  height: 100%;
+  margin: 0 -15px;
+  padding: 0 15px;
+  padding-bottom: 4em;
 }
 @media screen and (max-width: 768px) {
   .page-sidebar {
@@ -4781,6 +4787,9 @@ input[type="checkbox"].toggle__check {
   }
   .page-sidebar .posted-date {
     font-size: 0.95em;
+  }
+  .page-sidebar__body {
+    padding-bottom: 0;
   }
 }
 @media screen and (max-width: 768px) {
